# cpp-chip8-emulator

./: CMakeLists.txt  LICENSE
data/roms/: LICENSE-ROMS.md
src/: audio.cppm  cpu.cppm  display.cppm  main.cpp  memory.cppm
